_build/html/reports/study_guide_5.err.log
Traceback (most recent call last):
  File "C:\Python311\Lib\site-packages\jupyter_cache\executors\utils.py", line 58, in single_nb_execution
    executenb(
  File "C:\Python311\Lib\site-packages\nbclient\client.py", line 1304, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Python311\Lib\site-packages\jupyter_core\utils\__init__.py", line 166, in wrapped
    return loop.run_until_complete(inner)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Python311\Lib\asyncio\base_events.py", line 653, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "C:\Python311\Lib\site-packages\nbclient\client.py", line 705, in async_execute
    await self.async_execute_cell(
  File "C:\Python311\Lib\site-packages\nbclient\client.py", line 1020, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Python311\Lib\site-packages\nbclient\client.py", line 914, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
def add_student(students, name, age):
    # Your code here

students = {
    "Alice": 30,
    "Bob": 28,
    "Charlie": 22
}

name = "David"
age = 25
students = add_student(students, name, age)

name = "Alice"
age = 30
students = add_student(students, name, age)

print(students)
------------------

[1;36m  Cell [1;32mIn[21], line 4[1;36m[0m
[1;33m    students = {[0m
[1;37m    ^[0m
[1;31mIndentationError[0m[1;31m:[0m expected an indented block after function definition on line 1

IndentationError: expected an indented block after function definition on line 1 (3983316167.py, line 4)

